' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Student" {
  * id: integer <<generated>>
  --
  * version: integer
  * matrikelnummer: integer
  * studiengang: Studiengang
  * guthaben: integer
  * bd: date
  * created: timestamp
  * updated: timestamp
}

entity "Name" {
  * id: integer <<generated>>
  --
  * nachname: text
    vorname: text
}

entity "Foto" {
  * id: integer <<generated>>
  --
  * beschriftung: text
    contentType: text
  * **student_id**: integer <<FK>>
}

Student ||..|| Name
Student ||..o{ Foto


@enduml
